--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.0.0",
+    "@tailwindcss/forms": "^0.3.2",
     "next": "10.1.3",
+    "next-connect": "^0.10.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-ga": "^3.3.0",
+    "validator": "^13.6.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.2.12",
+    "tailwindcss": "^2.1.2"
   }
 }
