--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "@headlessui/react": "^1.0.0",
     "@tailwindcss/forms": "^0.3.2",
+    "mongodb": "^3.6.6",
     "next": "10.1.3",
     "next-connect": "^0.10.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-ga": "^3.3.0",
+    "react-toastify": "^7.0.4",
     "validator": "^13.6.0"
   },
   "devDependencies": {
