--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   "dependencies": {
     "@headlessui/react": "^1.0.0",
     "@tailwindcss/forms": "^0.3.2",
+    "bcryptjs": "^2.4.3",
     "mongodb": "^3.6.6",
     "next": "10.1.3",
     "next-connect": "^0.10.1",
+    "passport": "^0.4.1",
+    "passport-http": "^0.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-ga": "^3.3.0",
     "react-toastify": "^7.0.4",
+    "uuidv4": "^6.2.7",
     "validator": "^13.6.0"
   },
   "devDependencies": {
