--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "react-ga": "^3.3.0",
     "react-toastify": "^7.0.4",
     "uuidv4": "^6.2.7",
-    "validator": "^13.6.0"
-  },
-  "devDependencies": {
+    "validator": "^13.6.0",
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.12",
     "tailwindcss": "^2.1.2"
