--- a/package.json
+++ b/package.json
@@ -12,21 +12,23 @@
   ],
   "dependencies": {
     "@headlessui/react": "^1.0.0",
+    "@sendgrid/client": "^7.4.2",
+    "@sendgrid/mail": "^7.4.2",
     "@tailwindcss/forms": "^0.3.2",
+    "autoprefixer": "^10.2.5",
     "bcryptjs": "^2.4.3",
     "mongodb": "^3.6.6",
     "next": "10.1.3",
     "next-connect": "^0.10.1",
     "passport": "^0.4.1",
     "passport-http": "^0.3.0",
+    "postcss": "^8.2.12",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-ga": "^3.3.0",
     "react-toastify": "^7.0.4",
+    "tailwindcss": "^2.1.2",
     "uuidv4": "^6.2.7",
-    "validator": "^13.6.0",
-    "autoprefixer": "^10.2.5",
-    "postcss": "^8.2.12",
-    "tailwindcss": "^2.1.2"
+    "validator": "^13.6.0"
   }
 }
