display source pill with tooltip

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -9,7 +9,8 @@
       "@/lib/*": ["lib/*"],
       "@/config/*": ["config/*"],
       "@/db/*": ["db/*"],
-      "@/middleware/*": ["middleware/*"]
+      "@/middleware/*": ["middleware/*"],
+      "@/styles/*": ["styles/*"]
     }
   }
 }
