--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   ],
   "dependencies": {
     "@headlessui/react": "^1.0.0",
+    "@popperjs/core": "^2.9.2",
     "@sendgrid/client": "^7.4.2",
     "@sendgrid/mail": "^7.4.2",
     "@tailwindcss/forms": "^0.3.2",
