--- a/python/lambda/template.yml
+++ b/python/lambda/template.yml
@@ -11,10 +11,26 @@ Resources:
       Description: Scrape the latest tweets from VaxHuntersCan twitter account and load into DB via API
       MemorySize: 500
       Timeout: 600
-      # Function's execution role
       Policies:
-        - AWSLambdaBasicExecutionRole
-        - AWSLambda_ReadOnlyAccess
+        - Statement:
+            - Sid: AWSLambdaVPCAccessExecutionRole
+              Effect: Allow
+              Action:
+                - logs:CreateLogGroup
+                - logs:CreateLogStream
+                - logs:PutLogEvents
+                - ec2:CreateNetworkInterface
+                - ec2:DescribeNetworkInterfaces
+                - ec2:DeleteNetworkInterface
+              Resource: '*'
+            - Sid: AmazonElasticFileSystemClientFullAccess
+              Effect: Allow
+              Action:
+                - elasticfilesystem:ClientMount
+                - elasticfilesystem:ClientRootAccess
+                - elasticfilesystem:ClientWrite
+                - elasticfilesystem:DescribeMountTargets
+              Resource: '*'
       Layers:
         - !Ref libs
   libs:
